--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -2,7 +2,8 @@
 <title>Chest X-Ray Pneumonia</title>
 <header></header>
 <body>
-    <h1>Chest X-Ray is predicted to be : {{user.class_name}} with a {{user.confidence}} confidence level</h1>
+    <h1>Chest X-Ray is predicted to be :</h1>
+    <h2>{{user.class_name}}, with a {{user.confidence}} confidence level</h2>
 <!--    <img class=xraychest" src="{{user.img_path}}" alt="Chest X-Ray maybe presenting signs of pneumonia"/>-->
     <img class=xraychest" src="{{user.img_path}}" width="512 px"/>
 </body>
